--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   width: 300px;
   height: 300px;
   margin: auto;
-  margin-top: 600px;
+  margin-top: 20px;
   opacity: 0.7;
 }
 
@@ -33,6 +33,32 @@ body{
 }
 
 #list{
-  width: 200px;
-  height: 200px;
+  width: auto;
+  height: 100px;
+  list-style: none;
+  margin: auto;
+  margin-top: 300px;
+  text-align: center;
+}
+
+li{
+  margin-top: 8px;
+  font-style: italic;
+  font-size: 20px;
+  color: #3333ff;
+  display: inline;
+  margin-left: 20px;
+}
+
+li:hover{
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: cursive;
+  color:red;
+}
+
+h1{
+font-style: italic;
+color:purple;
+
 }
