--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 #player{
-  width: 300px;
+  width: 500px;
   height: 300px;
   margin: auto;
   margin-top: 20px;
   opacity: 0.7;
 }
 
-#previousTrack, #playTrack, #nextTrack{
+#previousTrack, #playTrack, #nextTrack, #stopTrack , #pauseTrack{
   width:98px;
   height:98px;
   margin: auto;
