--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/*
+Author: Faisal Khan
+Dated: June 13 2016
+
+An Mp3 player without using the built in player
+*/
+
+/*player is the div conataining all the buttons and an animation*/
 #player{
   width: 500px;
   height: 300px;
@@ -6,6 +14,7 @@
   opacity: 0.7;
 }
 
+/*all the divs for buttons*/
 #previousTrack, #playTrack, #nextTrack, #stopTrack , #pauseTrack{
   width:98px;
   height:98px;
@@ -14,6 +23,7 @@
   margin-top: 10%;
 }
 
+/*the images for the buttons*/
 .buttons{
   width:90px;
   height:90px;
@@ -24,6 +34,7 @@
   height:95px;
 }
 
+
 body{
   width: 100%;
   height: 100%;
@@ -32,6 +43,7 @@ body{
   background-repeat: no-repeat;
 }
 
+/*the songs list*/
 #list{
   width: auto;
   height: 100px;
@@ -58,17 +70,18 @@ li:hover{
 }
 
 h1{
-font-style: italic;
-color:purple;
+  font-style: italic;
+  color:purple;
 
 }
-
+/*div containing the animation*/
 #animateBars{
   height: 100px;
   width: 100px;
   margin: auto;
   margin-top: 100px;
 }
+/*the dice image to play random track*/
 #randomTrack{
-margin: auto;
+  margin: auto;
 }
