--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ An Mp3 player without using the built in player
 body{
   width: 100%;
   height: 100%;
-  background-image: url('back.jpg');
+  background-image: url('../images/back.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
 }
